--- a/static/style.css
+++ b/static/style.css
@@ -87,21 +87,37 @@ body {
 }
 
 .login .btn {
-  background: #4a77d4;
+  background: #d43a3a;
   border: none;
   border-radius: 5px;
   width: 100%;
   height: 50px;
   color: rgba(255, 255, 255, 0.789);
   font-size: 16px;
-  
+  cursor: pointer;
   font-style: oblique;
-  font-weight: bolder;
+  font-weight: bold;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.login button:hover {
-  background: #3a66d4;
+.login .btn:hover {
+  background: #4a77d4;
+  font-style: normal;
+  font-weight: bolder;
+  color: #ffffff;
 }
+
+/* Change the appearance when the button is pressed. */
+.btn:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(2px);
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: 0 0 5px #000000;
+}
+
 
 .mb-3 {
   margin-bottom: 20px;
